feature(*) : 更新参数设置并修改部分代码提交生成的bug

--- a/2.CHIP-CDN-PredictNum.ipynb
+++ b/2.CHIP-CDN-PredictNum.ipynb
@@ -6,16 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
     "import os\n",
     "import jieba\n",
     "import torch\n",
     "import pickle\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
     "import pandas as pd\n",
+    "import torch.nn as nn\n",
     "\n",
     "from ark_nlp.model.tc.bert import Bert\n",
     "from ark_nlp.model.tc.bert import BertConfig\n",
@@ -23,17 +19,6 @@
     "from ark_nlp.model.tc.bert import Task\n",
     "from ark_nlp.model.tc.bert import get_default_model_optimizer\n",
     "from ark_nlp.model.tc.bert import Tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 目录地址\n",
-    "train_data_path = '../data/source_datasets/CHIP-CTC/CHIP-CTC_train.json'\n",
-    "dev_data_path = '../data/source_datasets/CHIP-CTC/CHIP-CTC_dev.json'"
    ]
   },
   {
@@ -56,13 +41,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_df = pd.read_json(train_data_path)\n",
-    "train_data_df = (train_data_df\n",
-    "                 .loc[:,['text', 'label']])\n",
+    "train_data_df = pd.read_json('../data/source_datasets/CHIP-CDN/CHIP-CDN_train.json')\n",
+    "dev_data_df = pd.read_json('../data/source_datasets/CHIP-CDN/CHIP-CDN_dev.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_df['normalized_result_num'] = train_data_df['normalized_result'].apply(lambda x: len(x.split('##')))\n",
+    "dev_data_df['normalized_result_num'] = dev_data_df['normalized_result'].apply(lambda x: len(x.split('##')))\n",
     "\n",
-    "dev_data_df = pd.read_json(dev_data_path)\n",
+    "train_data_df['normalized_result_num_label'] = train_data_df['normalized_result_num'].apply(lambda x: 0 if x > 2 else x)\n",
+    "dev_data_df['normalized_result_num_label'] = dev_data_df['normalized_result_num'].apply(lambda x: 0 if x > 2 else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_df = (train_data_df\n",
+    "                 .loc[:,['text', 'normalized_result_num_label']]\n",
+    "                 .rename(columns={'normalized_result_num_label': 'label'}))\n",
+    "\n",
     "dev_data_df = (dev_data_df\n",
-    "                 .loc[:,['text', 'label']])"
+    "               .loc[:,['text', 'normalized_result_num_label']]\n",
+    "               .rename(columns={'normalized_result_num_label': 'label'}))"
    ]
   },
   {
@@ -88,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=128)"
+    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=100)"
    ]
   },
   {
@@ -130,10 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = BertConfig.from_pretrained(\n",
-    "    'hfl/chinese-macbert-base',\n",
-    "    num_labels=len(tc_train_dataset.cat2id)\n",
-    ")"
+    "config = BertConfig.from_pretrained('nghuyong/ernie-1.0',\n",
+    "                                    num_labels=len(tc_train_dataset.cat2id))"
    ]
   },
   {
@@ -158,19 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_module = Bert.from_pretrained(\n",
-    "    'hfl/chinese-macbert-base',\n",
-    "    config=config\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dl_module.pooling = 'last_avg'"
+    "dl_module = Bert.from_pretrained('nghuyong/ernie-1.0', \n",
+    "                                 config=config)"
    ]
   },
   {
@@ -184,9 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "#### 1. 任务参数和必要部件设定"
    ]
@@ -208,7 +201,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = get_default_model_optimizer(dl_module)"
+    "param_optimizer = list(dl_module.named_parameters())\n",
+    "param_optimizer = [n for n in param_optimizer if 'pooler' not in n[0]]\n",
+    "no_decay = ['bias', 'LayerNorm.bias', 'LayerNorm.weight']\n",
+    "optimizer_grouped_parameters = [\n",
+    "    {'params': [p for n, p in param_optimizer if not any(nd in n for nd in no_decay)],\n",
+    "     'weight_decay': 0.01},\n",
+    "    {'params': [p for n, p in param_optimizer if any(nd in n for nd in no_decay)], 'weight_decay': 0.0}\n",
+    "]      "
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Task(dl_module, optimizer, 'lsce', cuda_device=0)"
+    "model = Task(dl_module, 'adamw', 'lsce', cuda_device=0, ema_decay=0.995)"
    ]
   },
   {
@@ -242,10 +242,21 @@
    "source": [
     "model.fit(tc_train_dataset, \n",
     "          tc_dev_dataset,\n",
-    "          lr=4e-5,\n",
+    "          lr=3e-5,\n",
     "          epochs=num_epoches, \n",
-    "          batch_size=batch_size\n",
+    "          batch_size=batch_size,\n",
+    "          params=optimizer_grouped_parameters\n",
     "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.ema.store(model.module.parameters())\n",
+    "model.ema.copy_to(model.module.parameters())  "
    ]
   },
   {
@@ -254,7 +265,14 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 四、生成提交数据"
+    "### 四、模型验证与保存"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. 模型验证"
    ]
   },
   {
@@ -263,8 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from ark_nlp.model.tc.bert import Predictor"
+    "from ark_nlp.factory.predictor import TCPredictor"
    ]
   },
   {
@@ -273,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc_predictor_instance = Predictor(model.module, tokenizer, tc_train_dataset.cat2id)"
+    "tc_predictor_instance = TCPredictor(model.module, tokenizer, tc_train_dataset.cat2id)"
    ]
   },
   {
@@ -282,16 +299,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_json('../data/source_datasets/CHIP-CTC/CHIP-CTC_test.json')\n",
-    "\n",
-    "submit = []\n",
-    "for id_, text_ in zip(test_df['id'], test_df['text']):\n",
-    "    predict_ = tc_predictor_instance.predict_one_sample(text_)[0] \n",
-    "    submit.append({\n",
-    "        'id': id_,\n",
-    "        'text': text_,\n",
-    "        'label': predict_\n",
-    "    })"
+    "tc_predictor_instance.predict_one_sample('怀孕伴精神障碍',\n",
+    "                                         return_proba=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### 2. 模型保存"
    ]
   },
   {
@@ -300,10 +318,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = '../data/output_datasets/CHIP-CTC_test.json'\n",
-    "\n",
-    "with open(output_path,'w', encoding='utf-8') as f:\n",
-    "    f.write(json.dumps(submit, ensure_ascii=False))"
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.module.state_dict(),\n",
+    "           '../checkpoint/predict_num/module.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../checkpoint/predict_num/cat2id.pkl', \"wb\") as f:\n",
+    "    pickle.dump(tc_train_dataset.cat2id, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
    ]
   }
  ],
