--- a/CMeEE.ipynb
+++ b/CMeEE.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=100)"
+    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=128)"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = GlobalPointerBertConfig.from_pretrained('nghuyong/ernie-1.0', \n",
+    "config = GlobalPointerBertConfig.from_pretrained('hfl/chinese-macbert-base', \n",
     "                                                 num_labels=len(ner_train_dataset.cat2id))"
    ]
   },
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_module = GlobalPointerBert.from_pretrained('nghuyong/ernie-1.0', \n",
+    "dl_module = GlobalPointerBert.from_pretrained('hfl/chinese-macbert-base', \n",
     "                                              config=config)"
    ]
   },
@@ -214,7 +214,7 @@
    "outputs": [],
    "source": [
     "# 设置运行次数\n",
-    "num_epoches = 1\n",
+    "num_epoches = 5\n",
     "batch_size = 32"
    ]
   },
@@ -258,7 +258,7 @@
    "source": [
     "model.fit(ner_train_dataset, \n",
     "          ner_dev_dataset,\n",
-    "          lr=1e-5,\n",
+    "          lr=4e-5,\n",
     "          epochs=num_epoches, \n",
     "          batch_size=batch_size\n",
     "         )"
@@ -317,8 +317,15 @@
     "output_path = '../data/output_datasets/CMeEE_test.json'\n",
     "\n",
     "with open(output_path,'w', encoding='utf-8') as f:\n",
-    "    f.write(json.dumps(new_train_data, ensure_ascii=False))"
+    "    f.write(json.dumps(submit, ensure_ascii=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
