--- a/CMeIE.ipynb
+++ b/CMeIE.ipynb
@@ -141,7 +141,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=100)"
+    "tokenizer = Tokenizer(\n",
+    "    vocab='nghuyong/ernie-1.0',\n",
+    "    max_seq_len=128\n",
+    ")"
    ]
   },
   {
@@ -275,8 +278,9 @@
     "model.fit(\n",
     "    re_train_dataset,\n",
     "    re_dev_dataset,\n",
-    "    epochs=40,\n",
-    "    batch_size=6\n",
+    "    lr=4e-5,\n",
+    "    epochs=20,\n",
+    "    batch_size=16\n",
     ")"
    ]
   },
@@ -404,26 +408,6 @@
     "            fw.write(json.dumps(pred_dict, ensure_ascii=False) + '\\n')\n",
     "f.close()\n",
     "fw.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e5eb128",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = '骨性关节炎@在其他关节（如踝关节和腕关节），骨性关节炎比较少见，并且一般有潜在的病因（如结晶性关节病、创伤）'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2f70656",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "casrel_re_predictor_instance.predict_one_sample(text)"
    ]
   }
  ],
