--- a/KUAKE-QIC.ipynb
+++ b/KUAKE-QIC.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=30)"
+    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=50)"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "config = BertConfig.from_pretrained(\n",
-    "    'nghuyong/ernie-1.0',\n",
+    "    'hfl/chinese-macbert-base',\n",
     "    num_labels=len(tc_train_dataset.cat2id)\n",
     ")"
    ]
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "dl_module = Bert.from_pretrained(\n",
-    "    'nghuyong/ernie-1.0',\n",
+    "    'hfl/chinese-macbert-base',\n",
     "    config=config\n",
     ")"
    ]
@@ -191,8 +191,8 @@
    "outputs": [],
    "source": [
     "# 设置运行次数\n",
-    "num_epoches = 10\n",
-    "batch_size = 32"
+    "num_epoches = 3\n",
+    "batch_size = 16"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Task(dl_module, optimizer, 'lsce', cuda_device=0)"
+    "model = Task(dl_module, optimizer, 'ce', cuda_device=0)"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "source": [
     "model.fit(tc_train_dataset, \n",
     "          tc_dev_dataset,\n",
-    "          lr=2e-5,\n",
+    "          lr=3e-5,\n",
     "          epochs=3, \n",
     "          batch_size=batch_size\n",
     "         )"
@@ -296,8 +296,15 @@
     "output_path = '../data/output_datasets/KUAKE-QIC_test.json'\n",
     "\n",
     "with open(output_path,'w', encoding='utf-8') as f:\n",
-    "    f.write(json.dumps(new_train_data, ensure_ascii=False))"
+    "    f.write(json.dumps(submit, ensure_ascii=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
