--- a/KUAKE-QQR.ipynb
+++ b/KUAKE-QQR.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=50)"
+    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=30)"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = BertConfig.from_pretrained('nghuyong/ernie-1.0',\n",
+    "config = BertConfig.from_pretrained('hfl/chinese-macbert-base',\n",
     "                                    num_labels=len(tm_train_dataset.cat2id))"
    ]
   },
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_module = Bert.from_pretrained('nghuyong/ernie-1.0', \n",
+    "dl_module = Bert.from_pretrained('hfl/chinese-macbert-base', \n",
     "                                 config=config)"
    ]
   },
@@ -175,8 +175,8 @@
    "outputs": [],
    "source": [
     "# 设置运行次数\n",
-    "num_epoches = 10\n",
-    "batch_size = 32"
+    "num_epoches = 3\n",
+    "batch_size = 16"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "model.fit(tm_train_dataset, \n",
     "          tm_dev_dataset,\n",
     "          lr=2e-5,\n",
-    "          epochs=5, \n",
+    "          epochs=num_epoches, \n",
     "          batch_size=batch_size\n",
     "         )"
    ]
@@ -281,7 +281,7 @@
     "output_path = '../data/output_datasets/KUAKE-QQR_test.json'\n",
     "\n",
     "with open(output_path,'w', encoding='utf-8') as f:\n",
-    "    f.write(json.dumps(new_train_data, ensure_ascii=False))"
+    "    f.write(json.dumps(submit, ensure_ascii=False))"
    ]
   }
  ],
