--- a/CHIP-STS.ipynb
+++ b/CHIP-STS.ipynb
@@ -22,7 +22,18 @@
     "from ark_nlp.dataset import TMDataset\n",
     "from ark_nlp.model.tm.bert import Task\n",
     "from ark_nlp.model.tm.bert import get_default_model_optimizer\n",
-    "from ark_nlp.model.tm.bert import Tokenizer"
+    "from ark_nlp.model.tm.bert import Tokenizer\n",
+    "\n",
+    "from ark_nlp.factory.utils.seed import set_seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_seed(42)"
    ]
   },
   {
@@ -123,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=50)"
+    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=50)"
    ]
   },
   {
@@ -165,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = BertConfig.from_pretrained('nghuyong/ernie-1.0',\n",
+    "config = BertConfig.from_pretrained('hfl/chinese-macbert-base',\n",
     "                                    num_labels=len(tm_train_dataset.cat2id))"
    ]
   },
@@ -209,9 +220,7 @@
     "    ):\n",
     "        super(CondBert, self).__init__(config, encoder_trained, pooling)\n",
     "        \n",
-    "        self.condition_embed = nn.Embedding(config.num_conditions, config.hidden_size)\n",
-    "        nn.init.uniform_(self.condition_embed.weight.data)\n",
-    "        \n",
+    "        self.condition_embed = nn.Embedding(config.num_conditions, config.hidden_size)        \n",
     "        self.cond_layer_normal = CondLayerNormLayer(config.hidden_size)\n",
     "\n",
     "    def forward(\n",
@@ -250,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_module = CondBert.from_pretrained('nghuyong/ernie-1.0',\n",
+    "dl_module = CondBert.from_pretrained('hfl/chinese-macbert-base',\n",
     "                                     config=config)"
    ]
   },
@@ -277,8 +286,8 @@
    "outputs": [],
    "source": [
     "# 设置运行次数\n",
-    "num_epoches = 5\n",
-    "batch_size = 32"
+    "num_epoches = 2\n",
+    "batch_size = 16"
    ]
   },
   {
@@ -475,6 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "test_df = pd.read_json('../data/source_datasets/CHIP-STS/CHIP-STS_test.json')\n",
     "\n",
@@ -507,6 +517,13 @@
     "with open(output_path, 'w', encoding='utf-8') as f:\n",
     "    f.write(json.dumps(submit, ensure_ascii=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
