--- a/KUAKE-QTR.ipynb
+++ b/KUAKE-QTR.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(vocab='nghuyong/ernie-1.0', max_seq_len=30)"
+    "tokenizer = Tokenizer(vocab='hfl/chinese-macbert-base', max_seq_len=50)"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = BertConfig.from_pretrained('nghuyong/ernie-1.0',\n",
+    "config = BertConfig.from_pretrained('hfl/chinese-macbert-base',\n",
     "                                    num_labels=len(tm_train_dataset.cat2id))"
    ]
   },
@@ -147,8 +147,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dl_module = Bert.from_pretrained('nghuyong/ernie-1.0', \n",
+    "dl_module = Bert.from_pretrained('hfl/chinese-macbert-base', \n",
     "                                 config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_module.pooling = 'last_avg'"
    ]
   },
   {
@@ -174,8 +183,8 @@
    "outputs": [],
    "source": [
     "# 设置运行次数\n",
-    "num_epoches = 10\n",
-    "batch_size = 32"
+    "num_epoches = 3\n",
+    "batch_size = 16"
    ]
   },
   {
@@ -218,8 +227,8 @@
    "source": [
     "model.fit(tm_train_dataset, \n",
     "          tm_dev_dataset,\n",
-    "          lr=2e-5,\n",
-    "          epochs=5, \n",
+    "          lr=3e-5,\n",
+    "          epochs=num_epoches, \n",
     "          batch_size=batch_size\n",
     "         )"
    ]
@@ -280,7 +289,7 @@
     "output_path = '../data/output_datasets/KUAKE-QTR_test.json'\n",
     "\n",
     "with open(output_path,'w', encoding='utf-8') as f:\n",
-    "    f.write(json.dumps(new_train_data, ensure_ascii=False))"
+    "    f.write(json.dumps(submit, ensure_ascii=False))"
    ]
   }
  ],
